--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-file-access": "^3.1.1",
     "react-native-quick-base64": "^2.1.2",
     "react-native-quick-crypto": "^0.7.11",
     "react-native-safe-area-context": "4.12.0"
