--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "expo": "~52.0.9",
     "expo-sqlite": "~15.0.6",
     "expo-status-bar": "~2.0.0",
+    "papaparse": "^5.5.1",
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-document-picker": "^9.3.1",
     "react-native-file-access": "^3.1.1",
     "react-native-quick-base64": "^2.1.2",
     "react-native-quick-crypto": "^0.7.11",
-    "react-native-safe-area-context": "4.12.0"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-zip-archive": "github:pvburger/react-native-zip-archive"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "~18.3.12",
     "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "^5.3.3"
