--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "papaparse": "^5.5.1",
     "react": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-color-picker": "^0.6.0",
     "react-native-document-picker": "^9.3.1",
     "react-native-file-access": "^3.1.1",
     "react-native-quick-base64": "^2.1.2",
