--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/babel__core": "^7.20.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/papaparse": "^5.3.15",
     "@types/react": "~18.3.12",
