Added adaptive-icon.png, replacing original

--- a/app.json
+++ b/app.json
@@ -18,8 +18,8 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "backgroundColor": "#d3d3d3"
       },
       "package": "com.pvburger.lokbox"
     },
