Swapped out react-native-document-picker library (deprecated) with @react-native-documents/picker

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@craftzdog/react-native-buffer": "^6.0.5",
     "@react-native-community/slider": "^4.5.5",
+    "@react-native-documents/picker": "^10.1.1",
     "bcryptjs": "^2.4.3",
     "expo": "~52.0.9",
     "expo-sqlite": "~15.0.6",
@@ -20,7 +21,6 @@
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-color-picker": "^0.6.0",
-    "react-native-document-picker": "^9.3.1",
     "react-native-file-access": "^3.1.1",
     "react-native-quick-base64": "^2.1.2",
     "react-native-quick-crypto": "^0.7.11",
